Домашка сторінка дії

--- a/index.html
+++ b/index.html
@@ -19,7 +19,12 @@
     <div class="circle">2</div>
     <div class="circle">3</div>
 
-    <div class="wrapper"></div>
+    <div class="wrapper">
+        <img class="heart" src="img/heart.jpg" alt="У П С ! ! !">
+        <img class="heart" src="img/heart.jpg" alt="У П С ! ! !">
+        <img class="heart" src="img/heart.jpg" alt="У П С ! ! !">
+
+    </div>
 
     <script src="./script/script.js"></script>
     <script type="text/javascript"></script>
